# Epic_Events_CRM

./: README.md  config.py  epic_events.db  log_exceptions.py  main.py  permissions.py  pyproject.toml  requirements.txt  token.txt
controllers/: client_controller.py  contract_controller.py  employee_controller.py  event_controller.py
decorators/: decorators.py
models/: __init__.py  base.py  client.py  contract.py  employee.py  event.py
tests/: conftest.py  test_client.py  test_contract.py  test_db.py  test_employee.py  test_event.py
views/: client_view.py  contract_view.py  employee_view.py  event_view.py
